# GA4GH-WES-API-Service

./: .env.example  .flake8  .gitignore  .pylintrc  01-run_groups_implementation_plan.md  02-database_support_implementation_plan.md  02-example_workflow_execution.md  Claude_Implementation.md  Dockerfile  GA4GH-WES-Frontend-API-Integration.md  GA4GH-WES-Frontend-Component-Diagrams.md  GA4GH-WES-Frontend-Implementation-Plan.md  HealthOmics_Integration_Plan.md  Makefile  Procfile  README-WORKFLOW-EXECUTION.md  README.md  Running_Specific_HealthOmics_Workflows.md  application.py  boot.sh  config.py  main.py  pagination_implementation_plan.md  pyproject.toml  requirements.txt  run_tests.sh  workflow_daemon_implementation_plan.md
.ebextensions/: envvars.config
.github/workflows/: cicd.yml  python-app.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  1c1081db9f3d_add_workflow_run_id_to_workflowrun_table.py  61019f4b738b_add_project_and_task_name_columns_with_.py  dd0aa3a42a85_add_callback_tracking_fields.py  (+1 more)
api/runs/: routes.py
app/: __init__.py  celery_app.py  extensions.py  template_filters.py
cloudformation/: cloudformation-parameters.example.json  cloudformation-parameters.json  cloudformation-tags.example.txt  cloudformation-tags.txt  cloudformation.yaml  launch_stack.sh
core/: db.py  deps.py  lifespan.py
docs/: ARCHITECTURE.md  GA4GH-WES-Frontend-Architecture.md  HealthOmics_Integration_Plan.md  Running_Specific_HealthOmics_Workflows.md  aws_omics_usage.md
scripts/: get_all_runs.py  run_1000.sh  run_example.sh  run_omics_workflows.py  run_workflow_executor.py  run_workflows.sh  test_daemon.py  test_notification.py  wes_client  wes_client.py  workflow_daemon.py
tests/: __init__.py  conftest.py  post_runs.py  run_tests.py  test_base.py  wes_client.py
wes-frontend/: package-lock.json  package.json
(+253 files in other folders)
